--- a/app/src/main/res/layout/elementos_lista_productos_layout.xml
+++ b/app/src/main/res/layout/elementos_lista_productos_layout.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     app:cardCornerRadius="16dp"
     android:paddingTop="3dp"
@@ -25,13 +25,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_productos_comestibles"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_nombre_producto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:textSize="26dp"
+                android:fontFamily="@font/burgfest"
                 tools:text="Name" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -40,13 +50,25 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="20dp"
+                android:fontFamily="@font/millions"
                 tools:text="Price" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_click_boton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:drawable/checkbox_on_background" />
+                android:layout_gravity="center"
+                android:background="@drawable/check_icon" />
+
+            <Space
+                android:id="@+id/sp_separador"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:layout_gravity="center"
+                android:minWidth="20dp"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -54,6 +76,7 @@
             android:id="@+id/tv_ingredientes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15dp"
             tools:text="Ingredients" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
